adding id to cards where the info will be showed

--- a/vistas.html
+++ b/vistas.html
@@ -20,31 +20,31 @@
        
         <div>
           <h3>Temperatura:</h3>
-          <h4>-</h4>
+          <h4 id="temperatura">-</h4>
         </div>
         <div>
-          <h3>Temperatura:</h3>
-          <h4>-</h4>
+          <h3>Humedad:</h3>
+          <h4 id="humedad">-</h4>
         </div>
         <div>
-          <h3>Temperatura:</h3>
-          <h4>-</h4>
+          <h3>Probabilidad de lluvia:</h3>
+          <h4 id="probabilidad-lluvia">-</h4>
         </div>
         <div>
-          <h3>Temperatura:</h3>
-          <h4>-</h4>
+          <h3>Direccion del viento:</h3>
+          <h4 id="direccion-viento">-</h4>
         </div>
         <div>
-          <h3>Temperatura:</h3>
-          <h4>-</h4>
+          <h3>Cobertura del cielo:</h3>
+          <h4 id="coberturadelCielo">-</h4>
         </div>
         <div>
-          <h3>Temperatura:</h3>
-          <h4>-</h4>
+          <h3>Velocidad del viento:</h3>
+          <h4 id="velocidadViento">-</h4>
         </div>
         <div>
-          <h3>Temperatura:</h3>
-          <h4>-</h4>
+          <h3>Presion Atmosferica:</h3>
+          <h4 id="presion">-</h4>
         </div>
         
 
